# raylib

./: .gitignore
flecs/: main.cpp  makefile
flecs/src/: main.cpp  singleton.hpp
flecs/src/modules/coins/: coins.hpp  components.hpp
flecs/src/modules/coins/systems/: coin_spawn_system.hpp
flecs/src/modules/collision/: collision.hpp
flecs/src/modules/collision/systems/: collision_system.hpp
flecs/src/modules/input/: input.hpp
flecs/src/modules/input/systems/: input_system.hpp
flecs/src/modules/physics/: components.hpp  physics.hpp
flecs/src/modules/physics/systems/: integrate_system.hpp
flecs/src/modules/player/: components.hpp  player.hpp
flecs/src/modules/renderer/: components.hpp  renderer.hpp
flecs/src/modules/ui/: ui.hpp
flecs/src/utils/: center_to_rect.hpp  constants.hpp  rng.hpp
platformer-test/: README.md  main.cpp  makefile
tetris/: CMakeLists.txt
tetris/src/: main.cpp
tetris/src/modules/block/: block.hpp  components.hpp
tetris/src/modules/block/systems/: push_block_down_system.hpp
tetris/src/modules/block/utils/: add_block.hpp  get_block_cells.hpp  rotate.hpp  set_block_prefabs.hpp  try_move.hpp
tetris/src/modules/debug/: debug.hpp
tetris/src/modules/grid/: components.hpp  grid.hpp
tetris/src/modules/grid/utils/: clear_cells.hpp  is_invalid.hpp  set_cells.hpp
tetris/src/modules/input/: input.hpp  input_system.hpp
tetris/src/modules/render/: render.hpp  render_constants.hpp
tetris/src/modules/render/systems/: background_grid_system.hpp  draw_blocks.hpp
tetris/src/utils/: constants.hpp
(+3 files in other folders)
